@@ -207,11 +207,13 @@ mreturn mod_presence_in(mapi m, void *arg) {
 
             log_debug2(ZONE, LOGT_DELIVER, "%s attempted to probe by someone not qualified",jid_full(m->packet->from));
 
-	    presence_unsubscribed = jutil_presnew(JPACKET__UNSUBSCRIBED, jid_full(jid_user(m->packet->from)), NULL);
-	    xmlnode_put_attrib_ns(presence_unsubscribed, "from", NULL, NULL, jid_full(m->packet->to));
-	    jp = jpacket_new(presence_unsubscribed);
-	    jp->flag = PACKET_FORCE_SENT_MAGIC;
-	    js_deliver(m->si, jp);
+	    if (!_mod_presence_search(m->packet->from, mp->A)) {
+		presence_unsubscribed = jutil_presnew(JPACKET__UNSUBSCRIBED, jid_full(jid_user(m->packet->from)), NULL);
+		xmlnode_put_attrib_ns(presence_unsubscribed, "from", NULL, NULL, jid_full(m->packet->to));
+		jp = jpacket_new(presence_unsubscribed);
+		jp->flag = PACKET_FORCE_SENT_MAGIC;
+		js_deliver(m->si, jp);
+	    }
 
 	    /* XXX generate either <forbidden/> or <not-authorized/> error stanza (RFC 3921, 5.1.3) */
 	} else if (m->s->presence == NULL) {
